# scribe

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: check-commit-message.yml  dependabot-automerge.yml  pinact.yml  scribe-ci.yml
docs/: api-spec.json  summarizer-api.md  tools.md  transcriber-api.md
scripts/: dev-up.sh
src/: __init__.py  main.py  scheduler.py  worker.py
src/common/: __init__.py  job.py  job_registry.py  models.py  redis_client.py  status.py
src/summarization/: __init__.py  model.py  processor.py
src/transcription/: __init__.py  model.py  processor.py
tests/: __init__.py  test_common.py  test_job.py  test_main.py  test_summarization.py  test_transcription.py  test_worker_scheduler.py
tools/: scribe.py
