[tool.poetry]
name = "scribe"
version = "0.1.0"
description = "Audio transcription and text summarization service"
authors = ["t-ashula"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.27.0"
pydantic = "^2.11.7"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
redis = "^6.2.0"
rq = "^1.15.1"
rq-scheduler = "^0.13.1"
python-magic = "^0.4.27"
python-ulid = "^3.0.0"
transformers = "^4.53.2"
torch = "^2.7.1"
punctuators = "^0.0.7"
stable-ts = "^2.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
