[project]
name = "scribe"
version = "0.1.0"
description = "Audio transcription and text summarization service"
authors = [{name = "t-ashula"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.27.0",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "rq>=1.15.1",
    "rq-scheduler>=0.13.1",
    "python-magic>=0.4.27",
    "python-ulid>=3.0.0",
    "transformers>=4.53.2",
    "torch>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
